--- a/static/fonts.css
+++ b/static/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "PT Sans Caption";
-	src: url("PTSansCaptionRegular.ttf") format("truetype");
+	src: url("PTSansCaption-Regular.ttf") format("truetype");
 	font-weight: 400;
 	font-style: normal;
 }
