dataflow: fetch user subscriptions on login

--- a/src/feed/Feed.pug
+++ b/src/feed/Feed.pug
@@ -18,11 +18,11 @@ script.
 style.
 	nav
 		position fixed
-		top 10%
-		left 10%
-		width 20%
-		box-shadow 0 0 10rem lightgray
+		top 10vh
+		left 0
+		width 30vw
+		height 90vh
+		padding-left 5vw
+		padding-right 5vw
 	li
-		height 64px
-		padding 2rem
-		border 1px solid lightgray
+		padding 1em
