--- a/src/page/Content.pug
+++ b/src/page/Content.pug
@@ -35,7 +35,7 @@ script.
 	showDestinations = no
 	document.addEventListener 'keydown', (e) =>
 		switch e.key
-			when 'Escape'
+			when 'Escape', 'Enter'
 				showDestinations = !showDestinations
 			when '/'
 				showDestinations = yes
