--- a/src/page/Destinations.pug
+++ b/src/page/Destinations.pug
@@ -2,31 +2,32 @@ script.
 	import { fade } from 'svelte/transition'
 	import DestinationSearch from './DestinationSearch.pug'
 
-	import { getListingSlice } from '../API.coffee'
-	getSubscriptions = ->
-		getListingSlice
-			endpoint: '/subreddits/mine/subscriber'
-			options:
-				limit: 100
-		.then (subscriptions) ->
-			subscriptions.sort (a, b) -> if a.name < b.name then -1 else 1
-	getPopular = ->
-		getListingSlice
-			endpoint: '/subreddits/popular'
-
 nav(transition:fade={{ duration: 80 }})
-	{#await getSubscriptions() then subscriptions}
-		section
-			h1 Subreddits
-			ol
-				{#each subscriptions as subscription}
-					li
-						a(href='/r/{subscription.displayName}') {subscription.displayName}
-		section
-			h1 Multireddits
-		section
-			h1 Users
-		DestinationSearch(destinations={subscriptions.map((s) => s.displayName)})
+	h1 Personal
+	ol
+		li
+			a Mail
+		li
+			a Saved
+	h1 Multis
+	ol
+		li
+			a Home
+		li
+			a Popular
+		li
+			a All
+	h1 Subs
+	ol
+		{#each LS.userSubreddits.split(',') as name}
+			li
+				a(href='/r/{name}') {name}
+	h1 Users
+	ol
+		{#each LS.userUsers.split(',') as name}
+			li
+				a(href='/u/{name}') {name}
+	DestinationSearch(destinations={(LS.userSubreddits + ',' + LS.userUsers).split(',')})
 
 style.
 	nav
@@ -36,16 +37,18 @@ style.
 		height 100vh
 		width 100vw
 		overflow auto
-		padding 13vh 20vw
+		padding 13vh 10vw
 		background salmon
+		display grid
+		grid-template-rows 6vh 1fr
+		grid-auto-flow column
 	ol
-		margin-bottom 1em
+		height 100%
 		display flex
-		flex-flow row wrap
-	h1
-		text-transform uppercase
-	li + li
-		margin-left 1ch
-	a
-		font-size 6vh
-		color rgba(0,0,0,0.5)
+		flex-flow column wrap
+	li
+		font-size 2vh
+		opacity 0.5
+		&:hover
+			font-weight 900
+			opacity 1
