--- a/src/post/Post.pug
+++ b/src/post/Post.pug
@@ -11,7 +11,7 @@ script.
 	replySort = post.defaultReplySort
 
 {#if post instanceof Post}
-	article
+	article.hide-scrollbar
 		EmbedContent(content={post.content})
 		ImageContent(content={post.content})
 		LinkContent(content={post.content})
@@ -23,4 +23,11 @@ script.
 
 style.
 	article
-		padding-left 33%
+		position fixed
+		top 0
+		left 30vw
+		width 40vw
+		height 100vh
+		overflow auto
+		display grid
+		place-content center
