--- a/src/comment/MoreComments.pug
+++ b/src/comment/MoreComments.pug
@@ -1,11 +1,15 @@
 script.
 	import Comment from './Comment.pug'
 	import MoreComments from './MoreComments.coffee'
-	export moreComments = {}
+	export more = {}
+	load = false
 
-{#if moreComments instanceof MoreComments}
-	{#await moreComments.comments}
-		button(on:mousedown={moreComments.getComments()}) more
-	{:then comments}
-		{#each comments as comment}
-			Comment(comment={comment})
+{#if more instanceof MoreComments}
+	{#if load}
+		{#await more.load() then comments}
+			{#each comments as comment}
+				Comment(comment={comment})
+		{:catch error}
+			.error {error}
+	{:else}
+		button(on:mousedown={() => load = true})
