layout: rearrange content into center-sides

--- a/src/common.styl
+++ b/src/common.styl
@@ -26,6 +26,7 @@ body
 		--black white
 	background var(--white)
 	color var(--black)
+	background #40224042
 a
 	text-decoration none
 	color inherit
