--- a/src/post/content/EmbedContent.pug
+++ b/src/post/content/EmbedContent.pug
@@ -3,3 +3,8 @@ script.
 
 {#if content.type === 'embed'}
 	iframe(src={content.src} allowfullscreen='true' allow={content.allow} )
+
+style.
+	iframe
+		width 854px
+		height 480px
