--- a/src/post/content/ImageContent.pug
+++ b/src/post/content/ImageContent.pug
@@ -6,7 +6,7 @@ script.
 	section.hide-scrollbar
 		{#each content.images as i}
 			figure
-				Image(image={i} maxH={969} maxW={640})
+				Image(image={i} maxW={640})
 				{#if i.caption}
 					figcaption {i.caption.t}
 						{#if i.caption.u}
