--- a/src/media/Video.pug
+++ b/src/media/Video.pug
@@ -25,5 +25,8 @@ audio(bind:this={audio})
 		source(src={representation.href} type={representation.mime_type})
 
 style.
+	video
+		max-height 854px
+		max-width 854px
 	audio
 		display none
