--- a/src/feed/PostItem.pug
+++ b/src/feed/PostItem.pug
@@ -1,11 +1,12 @@
 script.
+	import PostFlair from '../post/PostFlair.pug'
 	import Post from '../post/Post.coffee'
 	export post = {}
 
 {#if post instanceof Post}
 	a(href={post.href})
 		.meta
-			span.flair {post.titleFlair.text}
+			PostFlair(flair={post.titleFlair})
 		.title {post.title}
 
 style.
@@ -17,10 +18,5 @@ style.
 		border 1px solid white
 	.meta
 		margin-bottom 2px
-	.flair
-		padding 1px 4px
-		background gray
-		color white
-		border-radius 4px
 	.title
 		font-size 15px
