styling: tables and various

--- a/src/comment/Comment.pug
+++ b/src/comment/Comment.pug
@@ -16,8 +16,9 @@ script.
 
 style.
 	.comment
-		margin-top 3em
-		width 60ch
+		margin-top 2em
+		:global(p)
+			max-width 60ch
 	.meta
 		display flex
 		margin-bottom 1rem
