--- a/src/layout/_Router.pug
+++ b/src/layout/_Router.pug
@@ -3,6 +3,7 @@ script.
 	import DetachedPost from './DetachedPost.pug'
 	import FrontPage from './FrontPage.pug'
 	import LoggingIn from './LoggingIn.pug'
+	import Multireddit from './Multireddit.pug'
 	import Subreddit from './Subreddit.pug'
 	import UserProfile from './UserProfile.pug'
 	import URLState from '../URLState.coffee'
