--- a/src/post/PostFlair.pug
+++ b/src/post/PostFlair.pug
@@ -7,6 +7,6 @@ script.
 style.
 	span
 		padding 1px 4px
-		background gray
-		color white
+		color rgba(0,0,0,0.5)
 		border-radius 4px
+		border 1px solid
