dataflow: add subreddit sorting UI and internals

--- a/src/common.styl
+++ b/src/common.styl
@@ -5,7 +5,7 @@ html
 body
 	margin 0
 	// font
-	font 500 12px/1.5 'Fabrikat Normal'
+	font 400 14px/1.5 'Karla'
 	word-spacing 0.25em
 	font-feature-settings 'kern'
 	-webkit-font-smoothing antialiased
