--- a/src/post/FeedPost.pug
+++ b/src/post/FeedPost.pug
@@ -16,12 +16,15 @@ style.
 		margin-bottom 2px
 	.subreddit
 		border 1px solid
-		padding 1px 4px
+		padding 1px 8px
 		border-radius 4px
-		background linear-gradient(120deg, rgba(0,0,0,0.5) 20px, transparent 20px)
+		background linear-gradient(120deg, rgba(0,0,0,0.5) 12px, transparent 16px)
 		.r
+			vertical-align top
+			font-size 10px
+			font-weight bold
 			color white
-			margin-right 16px
+			margin-right 8px
 			
 	.title
 		font-size 15px
