--- a/src/channel/Feed.pug
+++ b/src/channel/Feed.pug
@@ -13,7 +13,15 @@ ol
 				FeedPost(post={item})
 
 style.
+	ol
+		position fixed
+		top 0
+		left 320px
+		width 640px
+		padding 10vh 1vw 0 1vw
 	button
-		height 64px
+		height 68px
+		width 100%
 		overflow hidden
 		text-align left
+		padding 14px 16px
