--- a/src/layout/Subreddit.pug
+++ b/src/layout/Subreddit.pug
@@ -1,10 +1,13 @@
 script.
 	import Feed from '../channel/Feed.pug'
 	import Post from '../post/Post.pug'
+	import SubredditFilterGroup from '../subreddit/SubredditFilterGroup.pug'
 	export channel = null
 	selectedPost = null
 	selectPost = (post) -> selectedPost = post
 
-{#await channel.getItems(10) then posts}
-	Feed(items={posts} selectedItem={selectedPost} selectItem={selectPost})
-Post(post={selectedPost})
+{#key channel}
+	{#await channel.getItems(10) then posts}
+		Feed(items={posts} selectedItem={selectedPost} selectItem={selectPost})
+	SubredditFilterGroup(subredditName={channel.name} sort={channel.sort})
+	Post(post={selectedPost})
