widgets: add API call

--- a/src/channel/Feed.pug
+++ b/src/channel/Feed.pug
@@ -16,8 +16,8 @@ style.
 	ol
 		position fixed
 		top 0
-		left 320px
-		width 640px
+		left 16.6%
+		width 33.3%
 		padding 10vh 1vw 0 1vw
 	button
 		height 68px
