--- a/src/subreddit/SubredditFilterGroup.pug
+++ b/src/subreddit/SubredditFilterGroup.pug
@@ -83,9 +83,9 @@ style.
 	form
 		position fixed
 		bottom 91vh
-		left 320px
+		left 16.6vw
 		margin 0 1vw
-		width calc(640px - 2vw)
+		width 31.3vw
 		display flex
 		background rgba(0,0,0,0.1)
 		padding 4px
