--- a/src/comment/Comment.pug
+++ b/src/comment/Comment.pug
@@ -7,21 +7,33 @@ script.
 {#if comment instanceof Comment}
 	.comment
 		.meta
-			Placard(name={comment.authorName} flair={comment.authorFlair} subredditName={comment.subredditName})
-		{@html comment.content}
-		.replies
-			{#if comment.replies}
-				{#each comment.replies as reply}
-					svelte:self(comment={reply})
+			span {comment.score.text}
+		.main
+			{@html comment.content}
+			.body-meta
+				span
+				Placard(name={comment.authorName} flair={comment.authorFlair} subredditName={comment.subredditName} role={comment.authorRole})
+			.replies
+				{#if comment.replies}
+					{#each comment.replies as reply}
+						svelte:self(comment={reply})
 
 style.
 	.comment
-		margin-top 2em
-		:global(p)
-			max-width 60ch
+		margin-top 1em
+		display grid
+		grid-template-columns 49px 64ch
+	:global(.replies > .comment)
+		margin-top 0.5em
+	:global(.md)
+		border 2px solid
 	.meta
-		display flex
-		margin-bottom 1rem
+		padding-right 1ch
+		color rgba(0,0,0,0.5)
+		text-align right
+	.body-meta
+		display none
+		flex-flow column nowrap
+		justify-content space-between
 	.replies
-		padding-left 40px
 		border-left 1px solid lightgray
