feed: work on posts design

--- a/src/channel/Feed.pug
+++ b/src/channel/Feed.pug
@@ -21,9 +21,7 @@ style.
 		width 33.3%
 		padding-right 1vw
 	button
-		height 68px
 		width 100%
-		overflow hidden
 		text-align left
-		background white
-		padding 1em
+		background transparent
+		padding 0.5em
