--- a/src/subreddit/SubredditTag.pug
+++ b/src/subreddit/SubredditTag.pug
@@ -10,7 +10,8 @@ style.
 		border 1px solid
 		padding 1px 8px
 		border-radius 4px
-		background linear-gradient(120deg, rgba(0,0,0,0.5) 20px, transparent 20px)
+		background white
+		background-image linear-gradient(120deg, rgba(0,0,0,0.5) 20px, transparent 20px)
 		.r
 			vertical-align top
 			font-size 10px
