--- a/src/common.styl
+++ b/src/common.styl
@@ -55,6 +55,7 @@ video
 	display inline-block
 	padding calc(1ch + 0.25em) 2ch
 	background white
+	border 2px solid
 	border-radius 1ch
 	word-break break-word
 	overflow-wrap anywhere
@@ -73,19 +74,20 @@ video
 			color steelblue
 	blockquote
 		margin 0
-		padding-left 1em
-		border-left 1px solid
-		opacity 0.5
+		padding 0 1ch
+		border-left 3px solid gray
+		background gainsboro
 	code
 		font-weight bold
 		color red
 	h1, h2, h3, h4, h5, h6
-		text-transform uppercase
 		letter-spacing -0.1em
 	h1
-		font-size 2em
-	h2, h3, h4, h5, h6
 		font-size 1.5em
+	h2
+		font-size 1.3333em
+	h3, h4, h5, h6
+		font-size 1.1666em
 	hr
 		margin-top 1em
 		border 1px dashed
