--- a/src/post/FeedPost.pug
+++ b/src/post/FeedPost.pug
@@ -7,18 +7,37 @@ script.
 	export showFlair = false
 
 {#if post instanceof Post}
-	.meta
-		Placard(name={post.authorName} flair={post.authorFlair} subredditName={post.subredditName} role={post.authorRole})
-		{#if showFlair}
-			PostFlair(flair={post.titleFlair} subredditName={post.subredditName})
-		{:else}
-			SubredditTag(name={post.subredditName})
-	.title(title={post.title}) {post.title}
+	.feed-post
+		.score {post.score.text}
+		.md(class={post.isStickied || post.isSuperStickied ? 'stickied' : ''}) {post.title}
+			.meta
+				span
+				{#if showFlair}
+					PostFlair(flair={post.titleFlair} subredditName={post.subredditName})
+				{:else}
+					SubredditTag(name={post.subredditName})
 
 style.
+	.feed-post
+		position relative
+		display grid
+		grid-template-columns 64px 64ch
+	.score
+		padding-right 1ch
+		color rgba(0,0,0,0.5)
+		text-align right
+	.md
+		width 100%
+		font-size 18px
+		padding-top 2ch
+	.stickied
+		background green
+		color white
 	.meta
+		position absolute
+		top -1rem
+		width 75%
 		display flex
 		justify-content space-between
 		align-items flex-end
-	.title
-		font-size 18px
+		font-size 10pt
