--- a/src/post/PostFlair.pug
+++ b/src/post/PostFlair.pug
@@ -4,12 +4,13 @@ script.
 	export subredditName = ''
 
 {#if flair.text}
-	span
+	span(style='background: {flair.color}; color: {flair.color.cColor()}')
 		Flair(flair={flair} subredditName={subredditName})
 
 style.
 	span
 		padding 0 1ch
-		color rgba(0,0,0,0.5)
 		border-radius 1ch
-		border 1px solid
+		border 1px solid rgba(0,0,0,0.5)
+		background white
+		color rgba(0,0,0,0.5)
