--- a/src/media/Image.pug
+++ b/src/media/Image.pug
@@ -15,3 +15,9 @@ script.
 		style += 'max-height:' + maxH + 'px;'
 
 img(src={res.u} style={style})
+
+style.
+	img
+		box-sizing content-box
+		border 1px solid var(--black)
+		border-radius 1ch
