--- a/src/media/Video.pug
+++ b/src/media/Video.pug
@@ -26,7 +26,9 @@ audio(bind:this={audio})
 
 style.
 	video
-		max-height 854px
+		max-height 640px
 		max-width 854px
+		border 1px solid var(--black)
+		border-radius 1ch
 	audio
 		display none
