--- a/src/post/content/LinkContent.pug
+++ b/src/post/content/LinkContent.pug
@@ -3,4 +3,7 @@ script.
 
 {#if content.type === 'link'}
 	a(href={content.href}) {content.href}
-	iframe(src={content.href})
+
+style.
+	a
+		font-size 2em
