--- a/src/shared/RadioButtonLinkGroup.pug
+++ b/src/shared/RadioButtonLinkGroup.pug
@@ -16,6 +16,9 @@ style.
 		display flex
 	legend
 		margin-right 8px
+	a
+		text-decoration none
+		color inherit
 	label
 		border 1px solid
 		display inline-flex
