--- a/src/subreddit/SubredditFilterGroup.pug
+++ b/src/subreddit/SubredditFilterGroup.pug
@@ -83,7 +83,6 @@ style.
 	form
 		position fixed
 		bottom 91vh
-		left 16.6vw
-		margin 0 1vw
+		right 52%
 		background rgba(0,0,0,0.1)
 		padding 4px
