--- a/src/common.styl
+++ b/src/common.styl
@@ -6,8 +6,8 @@ body
 	margin 0
 	height 100vh
 	// font
-	font 400 10pt/1.5 'Karla'
-	word-spacing 0.25em
+	font 400 10pt/1.333 'Karla'
+	// word-spacing 0.25em
 	font-feature-settings 'kern'
 	-webkit-font-smoothing antialiased
 	-moz-osx-font-smoothing grayscale
@@ -27,10 +27,8 @@ body
 		--black white
 	background var(--white)
 	color var(--black)
-	background #40224042
 a
-	text-decoration none
-	color inherit
+	color dodgerblue
 address
 	font-style normal
 button
@@ -53,14 +51,9 @@ img
 video
 	box-sizing content-box
 .md
-	display inline-block
 	padding calc(1ch + 0.25em) 2ch
-	background white
-	border 2px solid
-	border-radius 1ch
 	word-break break-word
 	overflow-wrap anywhere
-	font 500 10pt/1.3333 'Karla'
 	.md-spoiler-text
 		background gray
 		color gray
@@ -69,10 +62,6 @@ video
 			color initial
 	& > * + *
 		margin-top 10pt
-	a
-		color dodgerblue
-		&:visited
-			color steelblue
 	blockquote
 		margin 0
 		padding 0 1ch
