--- a/src/post/FeedPost.pug
+++ b/src/post/FeedPost.pug
@@ -8,38 +8,36 @@ script.
 
 {#if post instanceof Post}
 	.feed-post
+		.tags
+			span
+			{#if showFlair}
+				PostFlair(flair={post.titleFlair} subredditName={post.subredditName})
+			{:else}
+				SubredditTag(name={post.subredditName})
+		.title
+			{#if post.content.type === 'link'}
+				a(href={post.content.href}) {post.title}
+			{:else}
+				| {post.title}
 		.data
-			.time {post.createDate.ago().count}{post.createDate.ago().unit}
-			.score {post.score.text}
-		.md(class={post.isStickied || post.isSuperStickied ? 'stickied' : ''}) {post.title}
-			.tags
-				span
-				{#if showFlair}
-					PostFlair(flair={post.titleFlair} subredditName={post.subredditName})
-				{:else}
-					SubredditTag(name={post.subredditName})
+			Placard(score={post.score} name={post.authorName} flair={post.authorFlair} subredditName={post.subredditName} role={post.authorRole})
+			span.time {post.createDate.ago().count}{post.createDate.ago().unit}
 
 style.
 	.feed-post
 		position relative
-		display grid
-		grid-template-columns 64px 64ch
-	.data
-		padding-right 1ch
-		color rgba(0,0,0,0.5)
-		text-align right
-	.md
-		width 100%
+		padding 1ch 2ch
+	.title
 		font-size 18px
-		padding-top 2ch
-	.stickied
-		background green
-		color white
 	.tags
 		position absolute
-		top -1rem
-		width 75%
+		top -3rem
+		width 100%
+		padding 0 2em
 		display flex
 		justify-content space-between
 		align-items flex-end
-		font-size 10pt
+	.data
+		font 400 10pt 'Iosevka Aile Web'
+		display flex
+		justify-content space-between
